transistioning InventoryItem to models

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -138,7 +138,7 @@
             change_display2.innerHTML = ''
             div_change.className = 'div-change'
             getUploadListPict()
-            document.getElementById('upload-file-div').innerHTML = "<input type='file' name='file' id='files' multiple='multiple' accept='image/*' />"
+            document.getElementById('upload-file-div').innerHTML = "<h3 style='color: white;'>Upload A New Picture</h3><input type='file' name='file' id='files' multiple='multiple' accept='image/*' />"
 
 
 
@@ -157,7 +157,7 @@
             change_display2.innerHTML = ''
             div_change.className = 'div-change'
             getUploadListCR()
-            document.getElementById('upload-file-div').innerHTML = "<input type='file' name='file' id='files' multiple='multiple' accept='application/pdf' />"
+            document.getElementById('upload-file-div').innerHTML = "<h3 style='color: white;'>Upload A New Report</h3><input type='file' name='file' id='files' multiple='multiple' accept='application/pdf' />"
 
 
             let fileInput = document.getElementById('files')
