adding dynamic display of forms based on input in build page

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -100,7 +100,8 @@
                     +'<option value="{{ x.id }}">{{ x }}</option>'
                 {% endfor %}
                 + '</select>'
-                +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="Description/Information goes here"></textarea>'
+                +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="     INSTRUCTIONS:\n'
+                    + 'Select Type (Display Page)\nSelect a Name\nSelect a Size (Size not Required)"></textarea>'
                 +'<hr>'
                   +'<input type="checkbox" name="in_stock" id="id_in_stock">'
                 +'<select name="on_hold" id="id_on_hold">'
