adding dynamic display of forms based on input in build page

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -82,8 +82,8 @@
             + '{% csrf_token %}'
                 + '<select name="type" id="id_type">'
                     +'<option value="" selected hidden>Choose Display Page</option>'
-                    +'<option onclick="updateName(' + TYPE.sport_rigs + ')" value="sport_rigs">Sport Rigs</option>'
-                    +'<option onclick="updateName('+ TYPE.tandem + ')" value="tandem">Tandem</option>'
+                    +'<option onclick="updateName(TYPE.sport_rigs)" value="sport_rigs">Sport Rigs</option>'
+                    +'<option onclick="updateName(TYPE.tandem)" value="tandem">Tandem</option>'
                     +'<option onclick="updateName()" value="student">Vector SE Student</option>'
                     +'<option onclick="updateName()" value="canopies">Canopies</option>'
                     +'<option onclick="updateName()" value="javelin_odyssey">Javelin-Odyssey</option>'
