--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -82,8 +82,8 @@
             + '{% csrf_token %}'
                 + '<select name="type" id="id_type">'
                     +'<option value="0" selected >Choose Display Page</option>'
-                    +'<option onclick="' + getNames() + '" value="sport_rigs">Sport Rigs</option>'
-                    +'<option onmouseout="getNames()" value="tandem">Tandem</option>'
+                    +'<option onclick="getNames()" value="sport_rigs">Sport Rigs</option>'
+                    +'<option onclick="getNames()" value="tandem">Tandem</option>'
                     +'<option onclick="getNames()" value="student">Vector SE Student</option>'
                     +'<option onclick="getNames()" value="canopies">Canopies</option>'
                     +'<option onclick="getNames()" value="javelin_odyssey">Javelin-Odyssey</option>'
