--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -82,12 +82,12 @@
             + '{% csrf_token %}'
                 + '<select name="type" id="id_type">'
                     +'<option value="0" selected >Choose Display Page</option>'
-                    +'<option onclick="getNames()" value="sport_rigs">Sport Rigs</option>'
-                    +'<option onclick="getNames()" value="tandem">Tandem</option>'
-                    +'<option onclick="getNames()" value="student">Vector SE Student</option>'
-                    +'<option onclick="getNames()" value="canopies">Canopies</option>'
-                    +'<option onclick="getNames()" value="javelin_odyssey">Javelin-Odyssey</option>'
-                    +'<option onclick="getNames()" value="do_not_display">Do Not Display</option>'
+                    +'<option onselect="getNames()" value="sport_rigs">Sport Rigs</option>'
+                    +'<option onselect="getNames()" value="tandem">Tandem</option>'
+                    +'<option onselect="getNames()" value="student">Vector SE Student</option>'
+                    +'<option onselect="getNames()" value="canopies">Canopies</option>'
+                    +'<option onselect="getNames()" value="javelin_odyssey">Javelin-Odyssey</option>'
+                    +'<option onselect="getNames()" value="do_not_display">Do Not Display</option>'
                 +'</select>'
                 +'<select name="name" required id="id_name">'
                     +'<option value="" selected>Choose a Display Page First **Type-Required**</option>'
