--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -80,14 +80,14 @@
 
         document.getElementById('create-form').innerHTML = '<form onsubmit="handleFormSubmit(event);createForm()" id="form" class="form" method="POST" action="https://vectorrigs.herokuapp.com/api/builder/" >'
             + '{% csrf_token %}'
-                + '<select name="type" id="id_type">'
+                + '<select name="type" id="id_type" onchange="getNames()">'
                     +'<option value="0" selected >Choose Display Page</option>'
-                    +'<option onselect="getNames()" value="sport_rigs">Sport Rigs</option>'
-                    +'<option onselect="getNames()" value="tandem">Tandem</option>'
-                    +'<option onselect="getNames()" value="student">Vector SE Student</option>'
-                    +'<option onselect="getNames()" value="canopies">Canopies</option>'
-                    +'<option onselect="getNames()" value="javelin_odyssey">Javelin-Odyssey</option>'
-                    +'<option onselect="getNames()" value="do_not_display">Do Not Display</option>'
+                    +'<option value="sport_rigs">Sport Rigs</option>'
+                    +'<option value="tandem">Tandem</option>'
+                    +'<option value="student">Vector SE Student</option>'
+                    +'<option value="canopies">Canopies</option>'
+                    +'<option value="javelin_odyssey">Javelin-Odyssey</option>'
+                    +'<option value="do_not_display">Do Not Display</option>'
                 +'</select>'
                 +'<select name="name" required id="id_name" onclick="getNames()">'
                     +'<option value="" selected>Choose a Display Page First **Type-Required**</option>'
