adding dynamic display of forms based on input in build page

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -89,7 +89,7 @@
                     +'<option value="javelin_odyssey">Javelin-Odyssey</option>'
                     +'<option value="do_not_display">Do Not Display</option>'
                 +'</select>'
-                +'<select name="name" required id="id_name">'
+                +'<select name="name" required id="id_name" onchange="setNameDescription()">'
                     +'<option value="" selected>Choose a Display Page First **Type-Required**</option>'
                 + '</select>'
                   +'<input type="text" name="serial_number" id="id_serial_number" value="TBD">'
