adding dynamic display of forms based on input in build page

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -80,7 +80,7 @@
 
         document.getElementById('create-form').innerHTML = '<form onsubmit="handleFormSubmit(event);createForm()" id="form" class="form" method="POST" action="https://vectorrigs.herokuapp.com/api/builder/" >'
             + '{% csrf_token %}'
-                + '<select name="type" id="id_type" onchange="getNames()">'
+                + '<select name="type" id="id_type" onchange="getNames(); getSizes">'
                     +'<option value="0" selected >Choose Display Page</option>'
                     +'<option value="sport_rigs">Sport Rigs</option>'
                     +'<option value="tandem">Tandem</option>'
@@ -95,10 +95,7 @@
                   +'<input type="text" name="serial_number" id="id_serial_number" value="TBD">'
                   +'<input type="text" name="due_date" maxlength="100" id="id_due_date" placeholder="Enter Due Date">'
                 +'<select name="size" id="id_size">'
-                +'<option id="" value="" selected>Choose a Size (not required)</option>'
-                {% for x in size_options %}
-                    +'<option value="{{ x.id }}">{{ x }}</option>'
-                {% endfor %}
+                    +'<option id="" value="" selected>Select a Size **Name/Type Required**</option>'
                 + '</select>'
                 +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="     INSTRUCTIONS:\n'
                     + 'Select Type (Display Page)\nSelect a Name\nSelect a Size (Size not Required)"></textarea>'
