adding dynamic display of forms based on input in build page

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -94,7 +94,7 @@
                 + '</select>'
                   +'<input type="text" name="serial_number" id="id_serial_number" value="TBD">'
                   +'<input type="text" name="due_date" maxlength="100" id="id_due_date" placeholder="Enter Due Date">'
-                +'<select name="size" id="id_size">'
+                +'<select name="size" id="id_size" onchange="setSizeDescription()">'
                     +'<option id="" value="" selected>Select a Size **Name/Type Required**</option>'
                 + '</select>'
                 +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="     INSTRUCTIONS:\n'
