--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -17,9 +17,9 @@
                 <div id="main-btn-group" class="main-btn-group">
                     <button id="display-form-btn" class="btnchanger" onclick="createForm();closeUpdateGroup()">Create A New Item</button>
                     <button id="display_id_btn" class="btnchanger" onclick="idChange();closeCreateForm()">Select Item To Display</button>
-                    <button class="btnchanger" onclick="openUpdateGroup(); closeFields()">Update Item</button>
-                    <button class="btnchanger" onclick="openSoldGroup(); closeFields()">Add/Update Sold</button>
-                    <button class="btnchanger" onclick="openShippingGroup(); closeFields()">Add/Update Shipping</button>
+                    <button class="btnchanger" onclick="openUpdateGroup()">Update Item</button>
+                    <button class="btnchanger" onclick="openSoldGroup()">Add/Update Sold</button>
+                    <button class="btnchanger" onclick="openShippingGroup()">Add/Update Shipping</button>
                 </div>
                 <div id="item-update-btn-group" class="none">
                     <button id="name_on_btn" class="btnchanger" onclick=NameChange();uploadFormOff()>Change Name</button>
