--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -36,6 +36,7 @@
                 </div>
                 <div id="sold-update-btn-group" class="none">
                     <button id="" class="btnchanger" onclick="">Item select</button>
+                    <button id="" class="btnchanger" onclick="">Create a New Customer</button>
                     <button id="" class="btnchanger" onclick="">Customer select</button>
                     <button id="" class="btnchanger" onclick="">Date sold select</button>
                     <button id="" class="btnchanger" onclick="">Sold infor 1 select</button>
@@ -45,6 +46,8 @@
                     <button id="" class="btnchanger" onclick="">Item select</button>
                     <button id="" class="btnchanger" onclick="">Sold Info Select</button>
                     <button id="" class="btnchanger" onclick="">Customer select</button>
+                    <button id="" class="btnchanger" onclick="">Update Shipping Address</button>
+                    <button id="" class="btnchanger" onclick="">Create New Shipping Address</button>
                     <button id="" class="btnchanger" onclick="">Date sold select</button>
                     <button id="" class="btnchanger" onclick="">Sold infor 1 select</button>
                     <button id="" class="btnchanger" onclick="">Sold info 2 select</button>
