organized build js files

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -17,7 +17,7 @@
                 <div id="main-btn-group" class="main-btn-group">
                     <button id="display-form-btn" class="btnchanger" onclick="createForm();closeUpdateGroup()">Create A New Item</button>
                     <button id="display_id_btn" class="btnchanger" onclick="idChange();closeCreateForm()">Select Item To Display</button>
-                    <button class="btnchanger" onclick="openUpdateGroup()">Update Item</button>
+                    <button id="display_update-btn" class="none" onclick="openUpdateGroup()">Update Item</button>
                     <button class="btnchanger" onclick="openSoldGroup()">Add/Update Sold</button>
                     <button class="btnchanger" onclick="openShippingGroup()">Add/Update Shipping</button>
                 </div>
