organized build js files

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -18,8 +18,8 @@
                     <button id="display-form-btn" class="btnchanger" onclick="createForm();closeUpdateGroups()">Create A New Item</button>
                     <button id="display_id_btn" class="btnchanger" onclick="idChange();closeCreateForm()">Select Item To Display</button>
                     <button id="display_update-btn" class="none" onclick="openUpdateGroup()">Update Item</button>
-                    <button class="btnchanger" onclick="openSoldGroup()">Add/Update Sold</button>
-                    <button class="btnchanger" onclick="openShippingGroup()">Add/Update Shipping</button>
+                    <button id="display_sold-btn" class="none" onclick="openSoldGroup()">Add/Update Sold</button>
+                    <button id="display_shipping-btn" class="none" onclick="openShippingGroup()">Add/Update Shipping</button>
                 </div>
                 <div id="item-update-btn-group" class="none">
                     <button id="name_on_btn" class="btnchanger" onclick=NameChange();uploadFormOff()>Change Name</button>
