--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -177,8 +177,8 @@
         change_display2.innerHTML = ''
         div_change.className = 'div-change'
         change_display.innerHTML = "<input type='number' name='id' id='id' placeholder='Enter ID'>"
-            + '<select name="name" required id="name_change" onchange="setNewDescription()">'
-            + '<option id="" selected>Choose A New Name - Current ' + document.getElementById('p-tag-name').innerHTML + ' </option>'
+            + '<select name="name" required id="name_change">'
+            + '<option onclick="setNewDescription()" id="" selected>Choose A New Name - Current ' + document.getElementById('p-tag-name').innerHTML + ' </option>'
             {% for x in name_options %}
 
                 + '<option value="{{ x.id }}">{{ x.name }}</option>'
