--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -177,7 +177,7 @@
         change_display2.innerHTML = ''
         div_change.className = 'div-change'
         change_display.innerHTML = "<input type='number' name='id' id='id' placeholder='Enter ID'>"
-            + '<select name="name" required id="name_change">'
+            + '<select name="name" required id="name_change" onchange="setNewDescription()">'
             + '<option  id="" selected>Choose A New Name - Current ' + document.getElementById('p-tag-name').innerHTML + ' </option>'
             {% for x in name_options %}
 
@@ -187,6 +187,25 @@
             + "<button id='btn' onsubmit='closeFields()' type='submit'>Update Name</button>"
         if (document.getElementById('e-id')) {
             document.getElementById('id').defaultValue = document.getElementById('e-id').innerHTML
+        }
+
+        function setNewDescription() {
+            let obj_id = document.getElementById('element-object-id').value
+            let description_info = document.getElementById('desc_info').value
+            let name_id = document.getElementById('name_change').value
+            let size_id = document.getElementById('size_info').value
+            const xhr = new XMLHttpRequest()
+            const method = 'GET'
+            let x = document.getElementById('id_size').value
+            const url = 'https://vectorrigs.herokuapp.com/api/createimageapi' + "?obj_id=" + obj_id + "&name_update_id=" + name_id + "&size_update_id=" + size_id
+            const responseType = 'json'
+            xhr.responseType = responseType
+            xhr.open(method, url)
+            xhr.onload = function () {
+                const serverResponse = xhr.response
+                loadElement()
+            }
+            xhr.send()
         }
 
 }
