organized build js files

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -66,7 +66,7 @@
                         <div id="upload-file-div"></div>
                     </form>
 
-                    <form id='form-price-change' action='/api/api'  method='POST' onsubmit="updateFields(event)">
+                    <form id='form-price-change' action='/api/api'  method='POST' onchange="setNewDescription()" onsubmit="updateFields(event)">
                         {% csrf_token %}
                         <div id="change-display" class="change-display"></div>
                     </form>
@@ -171,6 +171,25 @@
         document.getElementById('size').defaultValue = document.getElementById('size-info').innerHTML
     }
 
+    function setNewDescription() {
+            let obj_id = document.getElementById('element-object-id').value
+            let description_info = document.getElementById('desc_info').value
+            let name_id = document.getElementById('name_change').value
+            let size_id = document.getElementById('size_info').value
+            const xhr = new XMLHttpRequest()
+            const method = 'GET'
+            let x = document.getElementById('id_size').value
+            const url = 'https://vectorrigs.herokuapp.com/api/createimageapi' + "?obj_id=" + obj_id + "&name_update_id=" + name_id + "&size_update_id=" + size_id
+            const responseType = 'json'
+            xhr.responseType = responseType
+            xhr.open(method, url)
+            xhr.onload = function () {
+                const serverResponse = xhr.response
+
+            }
+            xhr.send()
+        }
+
     function NameChange() {
         document.getElementById('deletebtn').className = 'btnchanger'
         div_id_change.className = 'none'
@@ -189,24 +208,7 @@
             document.getElementById('id').defaultValue = document.getElementById('e-id').innerHTML
         }
 
-        function setNewDescription() {
-            let obj_id = document.getElementById('element-object-id').value
-            let description_info = document.getElementById('desc_info').value
-            let name_id = document.getElementById('name_change').value
-            let size_id = document.getElementById('size_info').value
-            const xhr = new XMLHttpRequest()
-            const method = 'GET'
-            let x = document.getElementById('id_size').value
-            const url = 'https://vectorrigs.herokuapp.com/api/createimageapi' + "?obj_id=" + obj_id + "&name_update_id=" + name_id + "&size_update_id=" + size_id
-            const responseType = 'json'
-            xhr.responseType = responseType
-            xhr.open(method, url)
-            xhr.onload = function () {
-                const serverResponse = xhr.response
-                loadElement()
-            }
-            xhr.send()
-        }
+
 
 }
     </script>
