--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -172,23 +172,23 @@
     }
 
     function setNewDescription() {
-            let obj_id = document.getElementById('element-object-id').value
-            let description_info = document.getElementById('desc_info').value
-            let name_id = document.getElementById('name_change').value
-            let size_id = document.getElementById('size_info').value
-            const xhr = new XMLHttpRequest()
-            const method = 'GET'
-            let x = document.getElementById('id_size').value
-            const url = 'https://vectorrigs.herokuapp.com/api/createimageapi' + "?obj_id=" + obj_id + "&name_update_id=" + name_id + "&size_update_id=" + size_id
-            const responseType = 'json'
-            xhr.responseType = responseType
-            xhr.open(method, url)
-            xhr.onload = function () {
-                const serverResponse = xhr.response
+        let obj_id = document.getElementById('element-object-id').value
+        let description_info = document.getElementById('desc_info').value
+        let name_id = document.getElementById('name_change').value
+        let size_id = document.getElementById('size_info').value
+        const xhr = new XMLHttpRequest()
+        const method = 'GET'
+        let x = document.getElementById('id_size').value
+        const url = 'https://vectorrigs.herokuapp.com/api/createimageapi' + "?obj_id=" + obj_id + "&name_update_id=" + name_id + "&size_update_id=" + size_id
+        const responseType = 'json'
+        xhr.responseType = responseType
+        xhr.open(method, url)
+        xhr.onload = function () {
+            const serverResponse = xhr.response
 
-            }
-            xhr.send()
         }
+        xhr.send()
+    }
 
     function NameChange() {
         document.getElementById('deletebtn').className = 'btnchanger'
@@ -203,7 +203,7 @@
                 + '<option onclick="setNewDescription()" value="{{ x.id }}">{{ x.name }}</option>'
             {% endfor %}
             + '</select>'
-            + "<button id='btn' onsubmit='closeFields()' type='submit'>Update Name</button>"
+            + "<button id='btn' onclick='setNewDescription()' onsubmit='closeFields()' type='submit'>Update Name</button>"
         if (document.getElementById('e-id')) {
             document.getElementById('id').defaultValue = document.getElementById('e-id').innerHTML
         }
