--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -172,10 +172,10 @@
     }
 
     function setNewDescription() {
-        let obj_id = document.getElementById('element-object-id').value
-        let description_info = document.getElementById('desc_info').value
-        let name_id = document.getElementById('name_change').value
-        let size_id = document.getElementById('size_info').value
+        let obj_id = document.getElementById('element-object-id').innerHTML
+        let description_info = document.getElementById('desc_info').innerHTML
+        let name_id = document.getElementById('name_change').innerHTML
+        let size_id = document.getElementById('size_info').innerHTML
         const xhr = new XMLHttpRequest()
         const method = 'GET'
         let x = document.getElementById('id_size').value
