organized build js files

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -175,7 +175,7 @@
         let obj_id = document.getElementById('element-object-id').innerHTML
         //let description_info = document.getElementById('desc_info').innerHTML
         let name_id = document.getElementById('name_change').innerHTML
-        let size_id = document.getElementById('size_info').innerHTML
+        let size_id = document.getElementById('size-info').innerHTML
         const xhr = new XMLHttpRequest()
         const method = 'GET'
         let x = document.getElementById('id_size').value
