organized build js files

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -174,7 +174,7 @@
     function setNewDescription() {
         let obj_id = document.getElementById('element-object-id').innerHTML
         let description_info = document.getElementById('desc-info').innerHTML
-        let name_id = document.getElementById('name_change').innerHTML
+        let name_id = document.getElementById('name_change').value
         let size_id = document.getElementById('size-info').innerHTML
         const xhr = new XMLHttpRequest()
         const method = 'GET'
