organized build js files

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -125,6 +125,7 @@
                 +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="     INSTRUCTIONS:\n'
                     + 'Select Type (Display Page)\nSelect a Name\nSelect a Size (Size not Required)"></textarea>'
                 +'<hr>'
+                  + '<label for="in_stock">IN STOCK</label>'
                   +'<input type="checkbox" name="in_stock" id="id_in_stock">'
                 +'<select name="on_hold" id="id_on_hold">'
                     +'<option value="" selected>Select Customer Hold (Not Required) </option>'
