organized build js files

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -115,12 +115,12 @@
                     +'<option value="do_not_display">Do Not Display</option>'
                 +'</select>'
                 +'<select name="name" required id="id_name" onchange="setNameDescription()">'
-                    +'<option value="" selected>Choose a Display Page First **Type-Required**</option>'
+                    +'<option value="" selected>**Display Page Required**</option>'
                 + '</select>'
                   +'<input type="text" name="serial_number" id="id_serial_number" value="TBD">'
                   +'<input type="text" name="due_date" maxlength="100" id="id_due_date" placeholder="Enter Due Date">'
                 +'<select name="size" id="id_size" onchange="setSizeDescription()">'
-                    +'<option id="" value="" selected>Select a Size **Name/Type Required**</option>'
+                    +'<option id="" value="" selected>**Name/Type Required**</option>'
                 + '</select>'
                 +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="     INSTRUCTIONS:\n'
                     + 'Select Type (Display Page)\nSelect a Name\nSelect a Size (Size not Required)"></textarea>'
