--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -343,7 +343,7 @@ button {
     font-family: Arial;
     font-size: 12pt;
     color: #b5db1a;
-    margin-left: 40%;
+    text-align: center;
     width: 50%;
 
 }
